[package]
name = "no-upgrade-args"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
candid = { workspace = true }
dfn_candid = { path = "../rs/rust_canisters/dfn_candid" }
dfn_core = { path = "../rs/rust_canisters/dfn_core" }
serde = { workspace = true }
