load("@python_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "utils",
    srcs = ["src/gitlab_config/utils.py"],
)

py_library(
    name = "dfinity_gitlab_config",
    srcs = ["src/gitlab_config/dfinity_gitlab_config.py"],
    deps = [
        ":utils",
        requirement("gitpython"),
        requirement("python-gitlab"),
        requirement("pyyaml"),
    ],
)

py_test(
    name = "validate_job_name",
    srcs = ["src/gitlab_config/main.py"],
    args = [
        "--cfg-validate-job-name",
        "--cfg-file",
        "gitlab-ci/config/zz-generated-gitlab-ci.yaml",
    ],
    data = ["config/zz-generated-gitlab-ci.yaml"],
    imports = ["src/"],  # this specifies the PYTHONPATH
    main = "main.py",
    deps = [
        ":dfinity_gitlab_config",
    ],
)

py_test(
    name = "bash_linter",
    srcs = ["src/gitlab_config/main.py"],
    args = [
        "--cfg-bash-linter",
        "--cfg-file",
        "gitlab-ci/config/zz-generated-gitlab-ci.yaml",
    ],
    data = ["config/zz-generated-gitlab-ci.yaml"],
    imports = ["src/"],
    main = "main.py",
    deps = [
        ":dfinity_gitlab_config",
    ],
)

py_test(
    name = "gitlab_config_linter",
    srcs = ["src/gitlab_config/main.py"],
    args = [
        "--cfg-gitlab-linter",
        "--cfg-file",
        "gitlab-ci/config/zz-generated-gitlab-ci.yaml",
    ],
    data = ["config/zz-generated-gitlab-ci.yaml"],
    env_inherit = [
        "HOME",
    ],
    imports = ["src/"],
    main = "main.py",
    tags = [
        "requires-network",
    ],
    deps = [
        ":dfinity_gitlab_config",
    ],
)
