load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

exports_files([
    "vuln-scan/vuln-scan.sh",
    "vuln-scan/vuln-scan.html",
    "dev-tools/build-setupos-config-image.sh",
])

py_console_script_binary(
    name = "sev-snp-measure",
    pkg = "@python_deps//sev_snp_measure",
    tags = ["manual"],
    visibility = ["//ic-os:__subpackages__"],
)
