# The goal of using package_groups is to decouple semantically different parts of the whole IC codebase.
# There is a 1-to-1 mapping between each package and a package group defined in this file.
# The relationship between package_groups is also defined here.
# In the future when upgrade to bazel >7, package groups will be moved into bazel modules so
# all the dependency rules between package groups will be more strictly enforced.

# The system tests package group contains all code related to system testing.
# Can depend on: any other package.
# Dependants: none.
# Exceptions:
#   //rs/ic_os/launch-single-vm:__pkg__ depends on rs/tests/driver:ic-system-test-driver
#   //rs/pocket_ic_server:__pkg__ can depend on rs/tests/httpbin-rs:httpbin
#   //rs/pocket_ic_server:__pkg__ can depend on rs/tests:ic-hs
#   //rs/pocket_ic_server:__pkg__ can depend on rs/tests/testing_verification:spec_compliance
package_group(
    name = "system-tests-pkg",
    packages = ["//rs/tests/..."],
)

# Targets for preparing (e.g. stripping binaries, compressiong wasms, etc) release artifacts.
# Can depend on: all targets excluding the //rs:system-tests-pkg package group.
# Dependants: //rs:ic-os-pkg, //rs:system-tests-pkg
package_group(
    name = "release-pkg",
    packages = ["//publish/..."],
)

# Targets containing tooling relevant for the released VMs.
# Can depend on: //rs:release-pkg.
# Exceptions:
#   //rs/ic_os/launch-single-vm:__pkg__ depends on rs/tests/driver:ic-system-test-driver
# Dependants: //rs:system-tests-pkg.
package_group(
    name = "ic-os-pkg",
    packages = [
        "//ic-os/...",
        "//rs/ic_os/...",
    ],
)

# Tools useful for local dev., operational tasks, debugging, etc.
# Can depend on: TODO: explain when replica-pkg is added
# Dependants: //rs:system-tests-pkg and //rs:release-pkg.
package_group(
    name = "ic-tools-pkg",
    packages = [
        "//rs/backup/...",
        "//rs/prep/...",
        "//rs/recovery/...",
        "//rs/registry/regedit/...",
        "//rs/replay/...",
        "//rs/starter/...",
        "//rs/state_tool/...",
    ],
)
