[workspace]

members = [
  "artifact_manager",
  "artifact_pool",
  "async_utils",
  "bitcoin/adapter",
  "bitcoin/adapter_service",
  "bitcoin/canister",
  "bitcoin/consensus",
  "bitcoin/validation",
  "bitcoin/types/public",
  "boundary_node/control_plane",
  "boundary_node/prober",
  "canister_client",
  "cycles_account_manager",
  "canister_http/adapter",
  "canister_http/adapter_service",
  "canister_sandbox",
  "canister_sandbox/backend_lib",
  "canister_sandbox/common",
  "canister_sandbox/replica_controller",
  "canister_sandbox/sandbox_launcher",
  "canonical_state",
  "certified_vars",
  "certified_vars/test-utils",
  "config",
  "consensus",
  "consensus/message",
  "consensus/ecdsa_object",
  "cow_state",
  "criterion_time",
  "crypto",
  "crypto/internal/crypto_lib/basic_sig/der_utils",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256k1",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256r1",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256_wycheproof_tests",
  "crypto/internal/crypto_lib/basic_sig/ed25519",
  "crypto/internal/crypto_lib/basic_sig/iccsa",
  "crypto/internal/crypto_lib/basic_sig/rsa_pkcs1",
  "crypto/internal/crypto_lib/bls12_381/serde/miracl",
  "crypto/internal/crypto_lib/bls12_381/common",
  "crypto/internal/crypto_lib/fs_ni_dkg",
  "crypto/internal/crypto_lib/hmac",
  "crypto/internal/crypto_lib/multi_sig/bls12_381",
  "crypto/internal/crypto_lib/sha2",
  "crypto/secrets_containers",
  "crypto/internal/crypto_lib/threshold_sig/bls12_381",
  "crypto/internal/crypto_lib/threshold_sig/tecdsa",
  "crypto/internal/crypto_lib/tls",
  "crypto/internal/crypto_lib/types",
  "crypto/internal/crypto_service_provider",
  "crypto/internal/csp_test_utils",
  "crypto/internal/logmon",
  "crypto/internal/test_vectors",
  "crypto/node_key_validation",
  "crypto/sha",
  "crypto/test_utils",
  "crypto/test_utils/threshold_sigs",
  "crypto/test_utils/canister_threshold_sigs",
  "crypto/tls_interfaces",
  "crypto/tls",
  "crypto/tree_hash",
  "crypto/utils/basic_sig",
  "crypto/utils/threshold_sig",
  "cup_explorer",
  "depcheck",
  "drun",
  "replay",
  "elastic_common_schema",
  "embedders",
  "execution_environment",
  "guestos_vsock_agent",
  "http_handler",
  "http_utils",
  "ic_fondue",
  "ic_p8s_service_discovery",
  "ic_p8s_service_discovery/log",
  "identity",
  "ingress_manager",
  "interfaces",
  "log_analyzer",
  "memory_tracker",
  "messaging",
  "monitoring/context_logger",
  "monitoring/logger",
  "monitoring/metrics",
  "monitoring/metrics_exporter",
  "monitoring/pprof",
  "monitoring/prober",
  "nervous_system/common",
  "nervous_system/root",
  "nns/constants",
  "nns/common",
  "nns/common/test_canister",
  "nns/cmc",
  "nns/governance_upgrader",
  "nns/handlers/lifeline",
  "nns/handlers/root",
  "nns/identity",
  "nns/init",
  "nns/inspector",
  "nns/integration_tests",
  "nns/governance",
  "nns/nns-ui",
  "nns/test_utils",
  "nns/test_utils_macros",
  "nns/gtc",
  "nns/gtc_accounts",
  "determinism_test",
  "orchestrator",
  "orchestrator/registry_replicator",
  "p2p",
  "replica/setup_ic_network",
  "phantom_newtype",
  "prep",
  "protobuf",
  "registry/admin",
  "registry/admin-derive",
  "registry/canister",
  "registry/client",
  "registry/common",
  "registry/keys",
  "registry/provisional_whitelist",
  "registry/regedit",
  "registry/routing_table",
  "registry/subnet_features",
  "registry/subnet_type",
  "registry/transport",
  "replica",
  "replica_tests",
  "replicated_state",
  "rosetta-api",
  "rosetta-api/ledger_canister",
  "rosetta-api/hardware_wallet_tests",
  "rosetta-api/test_utils",
  "rust_canisters/canister_test",
  "rust_canisters/dfn_core",
  "rust_canisters/dfn_candid",
  "rust_canisters/dfn_http",
  "rust_canisters/dfn_json",
  "rust_canisters/dfn_macro",
  "rust_canisters/dfn_protobuf",
  "rust_canisters/memory_test",
  "rust_canisters/on_wire",
  "rust_canisters/pmap",
  "rust_canisters/stable_reader",
  "rust_canisters/statesync_test",
  "rust_canisters/tests",
  "rust_canisters/xnet_test",
  "scenario_tests",
  "sns/governance",
  "sns/integration_tests",
  "sns/test_utils",
  "starter",
  "state_manager",
  "state_machine_tests",
  "state_layout",
  "state_tool",
  "sys",
  "system_api",
  "test_utilities",
  "test_utilities/artifact_pool",
  "tests",
  "transport",
  "transport_test_client",
  "tree_deserializer",
  "types/types",
  "types/types_test_utils",
  "types/base_types",
  "types/error_types",
  "types/ic00_types",
  "types/wasm_types",
  "universal_canister/lib",
  "utils",
  "validator",
  "workload_generator",
]

exclude = ["universal_canister/impl"]

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true

[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to reduce both the compilation time and the binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"

[profile.canister-release]
inherits = "release"
debug = false
lto = true
opt-level = 'z'

[profile.dev.package.miracl_core_bls12381]
# Optimise the miracl_core_bls12381 cryptographic library, or else NiDKG tests take 4 hours.
opt-level = 3

[patch.crates-io]
# TODO (CRP-1204): Remove this once tokio-rustls has been updated.
webpki = { git = "https://github.com/dfinity-lab/webpki", branch = "v0.21.4-v3-no-extensions" }
