[workspace]

members = [
  "artifact_manager",
  "artifact_pool",
  "async_utils",
  "backup",
  "bazelifier",
  "bitcoin/adapter",
  "bitcoin/client",
  "bitcoin/service",
  "bitcoin/canister",
  "bitcoin/ckbtc/agent",
  "bitcoin/ckbtc/minter",
  "bitcoin/consensus",
  "bitcoin/validation",
  "bitcoin/test-utils",
  "bitcoin/types/internal",
  "bitcoin/types/public",
  "boundary_node/certificate_issuance",
  "boundary_node/control_plane",
  "boundary_node/denylist_updater",
  "boundary_node/ic_balance_exporter",
  "boundary_node/icx_proxy",
  "boundary_node/prober",
  "canister_client",
  "canister_client/sender",
  "cycles_account_manager",
  "canister_http/adapter",
  "canister_http/client",
  "canister_http/service",
  "canister_sandbox",
  "canister_sandbox/backend_lib",
  "canister_sandbox/common",
  "canister_sandbox/replica_controller",
  "canister_sandbox/sandbox_launcher",
  "canonical_state",
  "certification",
  "certification/test-utils",
  "config",
  "consensus",
  "constants",
  "criterion_time",
  "crypto",
  "crypto/extended_bip32",
  "crypto/for_verification_only",
  "crypto/iccsa",
  "crypto/internal/crypto_lib/basic_sig/der_utils",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256k1",
  "crypto/internal/crypto_lib/basic_sig/ecdsa_secp256r1",
  "crypto/internal/crypto_lib/basic_sig/ed25519",
  "crypto/internal/crypto_lib/basic_sig/iccsa",
  "crypto/internal/crypto_lib/basic_sig/rsa_pkcs1",
  "crypto/internal/crypto_lib/bls12_381/type",
  "crypto/internal/crypto_lib/hmac",
  "crypto/internal/crypto_lib/multi_sig/bls12_381",
  "crypto/internal/crypto_lib/seed",
  "crypto/internal/crypto_lib/sha2",
  "crypto/secrets_containers",
  "crypto/internal/crypto_lib/threshold_sig/bls12_381",
  "crypto/internal/crypto_lib/threshold_sig/bls12_381/der_utils",
  "crypto/internal/crypto_lib/threshold_sig/tecdsa",
  "crypto/internal/crypto_lib/tls",
  "crypto/internal/crypto_lib/types",
  "crypto/internal/crypto_service_provider",
  "crypto/internal/crypto_service_provider/protobuf_generator",
  "crypto/internal/csp_test_utils",
  "crypto/internal/logmon",
  "crypto/test_utils/reproducible_rng",
  "crypto/internal/test_vectors",
  "crypto/node_key_generation",
  "crypto/node_key_validation",
  "crypto/getrandom_for_wasm",
  "crypto/prng",
  "crypto/sha",
  "crypto/temp_crypto",
  "crypto/test_utils",
  "crypto/test_utils/ni-dkg",
  "crypto/test_utils/threshold_sigs",
  "crypto/test_utils/canister_threshold_sigs",
  "crypto/tecdsa",
  "crypto/tls_interfaces",
  "crypto/tls_interfaces/mocks",
  "crypto/tree_hash",
  "crypto/utils/basic_sig",
  "crypto/utils/threshold_sig",
  "crypto/utils/threshold_sig_der",
  "cup_explorer",
  "depcheck",
  "drun",
  "recovery",
  "replay",
  "elastic_common_schema",
  "embedders",
  "execution_environment",
  "guestos_vsock_agent",
  "http_endpoints/public",
  "http_endpoints/metrics",
  "http_utils",
  "ic_fondue",
  "ic_p8s_service_discovery",
  "ic_p8s_service_discovery/log",
  "service_discovery",
  "log_scraper",
  "identity",
  "ingress_manager",
  "interfaces",
  "interfaces/bitcoin_adapter_client",
  "interfaces/canister_http_adapter_client",
  "interfaces/state_manager",
  "interfaces/state_manager/mocks",
  "interfaces/p2p",
  "interfaces/registry",
  "interfaces/registry/mocks",
  "interfaces/transport",
  "interfaces/transport/mocks",
  "memory_tracker",
  "messaging",
  "monitoring/adapter_metrics",
  "monitoring/adapter_metrics_service",
  "monitoring/context_logger",
  "monitoring/logger",
  "monitoring/metrics",
  "monitoring/metrics_encoder",
  "monitoring/pprof",
  "nervous_system/common",
  "nervous_system/common/build_metadata",
  "nervous_system/common/test_canister",
  "nervous_system/common/test_keys",
  "nervous_system/root",
  "nns/constants",
  "nns/common",
  "nns/common/protobuf_generator",
  "nns/cmc",
  "nns/governance",
  "nns/governance/protobuf_generator",
  "nns/governance_upgrader",
  "nns/handlers/lifeline",
  "nns/handlers/root",
  "nns/handlers/root/protobuf_generator",
  "nns/identity",
  "nns/init",
  "nns/inspector",
  "nns/integration_tests",
  "nns/nns-ui",
  "nns/test_utils",
  "nns/test_utils_macros",
  "nns/gtc",
  "nns/gtc/protobuf_generator",
  "nns/gtc_accounts",
  "nns/sns-wasm",
  "determinism_test",
  "orchestrator",
  "orchestrator/dashboard",
  "orchestrator/registry_replicator",
  "p2p",
  "replica/setup_ic_network",
  "phantom_newtype",
  "prep",
  "protobuf",
  "protobuf/generator",
  "registry/admin",
  "registry/admin-derive",
  "registry/canister",
  "registry/canister/protobuf_generator",
  "registry/client",
  "registry/fake",
  "registry/helpers",
  "registry/local_registry",
  "registry/local_store",
  "registry/local_store/artifacts",
  "registry/keys",
  "registry/proto",
  "registry/proto/generator",
  "registry/proto_data_provider",
  "registry/provisional_whitelist",
  "registry/regedit",
  "registry/nns_data_provider",
  "registry/routing_table",
  "registry/subnet_features",
  "registry/subnet_type",
  "registry/transport",
  "registry/transport/protobuf_generator",
  "replica",
  "replica_tests",
  "replicated_state",
  "rosetta-api",
  "rosetta-api/icp_ledger",
  "rosetta-api/icp_ledger/archive",
  "rosetta-api/icp_ledger/ledger",
  "rosetta-api/icp_ledger/protobuf_generator",
  "rosetta-api/ledger_core",
  "rosetta-api/ledger_canister_core",
  "rosetta-api/ledger_canister_blocks_synchronizer",
  "rosetta-api/ledger_canister_blocks_synchronizer/test_utils",
  "rosetta-api/icrc1",
  "rosetta-api/icrc1/agent",
  "rosetta-api/icrc1/benchmark/generator",
  "rosetta-api/icrc1/benchmark/worker",
  "rosetta-api/icrc1/client",
  "rosetta-api/icrc1/client/cdk",
  "rosetta-api/icrc1/index",
  "rosetta-api/icrc1/ledger",
  "rosetta-api/icrc1/ledger/sm-tests",
  "rosetta-api/icrc1/archive",
  "rosetta-api/hardware_wallet_tests",
  "rosetta-api/test_utils",
  "rust_canisters/canister_creator",
  "rust_canisters/canister_test",
  "rust_canisters/dfn_core",
  "rust_canisters/dfn_candid",
  "rust_canisters/dfn_http",
  "rust_canisters/dfn_http_metrics",
  "rust_canisters/dfn_json",
  "rust_canisters/dfn_macro",
  "rust_canisters/dfn_protobuf",
  "rust_canisters/ecdsa",
  "rust_canisters/http_types",
  "rust_canisters/memory_test",
  "rust_canisters/proxy_canister",
  "rust_canisters/on_wire",
  "rust_canisters/pmap",
  "rust_canisters/stable_reader",
  "rust_canisters/statesync_test",
  "rust_canisters/tests",
  "rust_canisters/xnet_test",
  "rust_canisters/call_tree_test",
  "rust_canisters/response_payload_test",
  "scenario_tests",
  "sns/cli",
  "sns/governance",
  "sns/governance/protobuf_generator",
  "sns/init",
  "sns/init/protobuf_generator",
  "sns/integration_tests",
  "sns/root",
  "sns/root/protobuf_generator",
  "sns/swap",
  "sns/test_utils",
  "starter",
  "state_manager",
  "state_machine_tests",
  "state_layout",
  "state_tool",
  "sys",
  "system_api",
  "test_utilities",
  "test_utilities/artifact_pool",
  "test_utilities/load_wasm",
  "test_utilities/compare_dirs",
  "test_utilities/logger",
  "test_utilities/metrics",
  "test_utilities/tmpdir",
  "tests",
  "tests/test_canisters/http_counter",
  "tests/test_canisters/message",
  "transport",
  "transport_test_client",
  "tree_deserializer",
  "types/types",
  "types/types_test_utils",
  "types/base_types",
  "types/base_types/protobuf_generator",
  "types/error_types",
  "types/ic00_types",
  "types/wasm_types",
  "universal_canister/lib",
  "utils",
  "utils/rustfmt",
  "validator",
  "vector_config_generator",
  "workload_generator",
  "xnet/endpoint",
  "xnet/hyper",
  "xnet/payload_builder",
  "xnet/uri",
]

resolver = "2"

exclude = ["universal_canister/impl"]

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true

[profile.release-stripped]
inherits = "release"
lto = "thin"
debug = false

[profile.release-lto]
inherits = "release"
# Enable "thin" LTO to reduce both the compilation time and the binary size.
# See: https://doc.rust-lang.org/cargo/reference/profiles.html#lto
lto = "thin"

[profile.canister-release]
inherits = "release"
debug = false
lto = true
opt-level = 'z'

[profile.dev.package.ic_bls12_381]
opt-level = 3

[patch.crates-io]
# TODO (CRP-1204): Remove this once tokio-rustls has been updated.
webpki = { git = "https://github.com/dfinity-lab/webpki", branch = "v0.21.4-v3-no-extensions" }
# Current jsonrpc version (0.12.1) does not support ipv6 addressing. When new version is
# released this can be removed.
jsonrpc = { git = "https://github.com/apoelstra/rust-jsonrpc", rev = "e42044d" }
ciborium = { git = "https://github.com/enarx/ciborium", rev = "e719537c99b564c3674a56defe53713c702c6f46" }
# This version pins prost 0.11. Please remove after the next pprof release.
pprof = { git = "https://github.com/tikv/pprof-rs", rev = "059d3c80395c74e9f82ca1f9cbb3c013acfffb75" }
